@@ -24,6 +24,7 @@ Version 1.7.5+svn:
    * Allow [story] [part] blocks to specify the title box alignment
      with title_alignment=
    * Implemented FR #14246 (visible_in_shroud= for [label])
+   * Modified Lua handling of action handlers and WML objects.
  * Miscellaneous and bugfixes:
    * Fix broken "Skip Ai moves" option.
    * Changed upload log format and defaulted the new uploader.
